<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Latihan_Bareng1</string>
    <string name="welcome_to_e_learning">Welcome to E-learning</string>
    <string name="nip">NIP/NIM</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="doesn_t_have_an_account">Doesn\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="chii_3_cenpai">Chii Cenpai</string>
    <string name="insert_your_picture">Insert your picture</string>
    <string name="browse">Browse</string>
    <string name="nama">Nama</string>
    <string name="email">E-mail</string>
    <string name="dosen">Dosen</string>
    <string name="mahasiswa">Mahasiswa</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="add_class">Add Class</string>
    <string name="choose_class">Choose Class</string>
    <string name="menu_dosen">Menu Dosen</string>
    <string name="nomor_induk">Nomor Induk : </string>
    <string name="isinomorinduk">isiNomorInduk</string>
    <string name="isi_email">isiEmail</string>
    <string name="emailDiEditProfil">Email :</string>
    <string name="passwordDiEditProfil">Password :</string>
    <string name="namaDiEditProfil">Nama :</string>
    <string name="isinama">isiNama</string>
    <string name="submit">Submit</string>
    <string name="kode_kelas">Kode Kelas</string>
    <string name="jumlah_mahasiswa">Jumlah Mahasiswa:</string>
    <string name="search">Search</string>
    <string name="isinamakelas">IsiNamaKelas</string>
    <string name="matakuliah">Mata Kuliah:</string>
    <string name="sks_mata_kuliah">SKS Mata Kuliah:</string>
    <string name="isisksmatakuliah">IsiSKSMataKuliah</string>
    <string name="isijumlahmhs">IsiJumlahMhs</string>
    <string name="jumlah_tugas">Jumlah Tugas:</string>
    <string name="isimatakuliah">IsiMataKuliah</string>
    <string name="isijumlahtugas">IsiJumlahTugas</string>
    <string name="jumlah_kelompok">Jumlah Kelompok:</string>
    <string name="isijumlahkelompok">IsiJumlahKelompok</string>
    <string name="hapus_kelas">Hapus Kelas</string>
    <string name="pilih_kelas">Pilih Kelas</string>
    <string name="cari_mahasiswa_dari_nim">Cari Mahasiswa dari NIM</string>
    <string name="nimmahasiswa">NIMmahasiswa</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="daftar_mahasiswa">Daftar Mahasiswa</string>
    <string name="tambah_kelompok_baru">Tambah Kelompok Baru</string>
    <string name="nomor_kelompok">Nomor Kelompok</string>
    <string name="nim">NIM</string>
    <string name="set_ketua">Set Ketua</string>

</resources>
