<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="riksameidy.com.latihan_bareng1.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_e_learning"
            android:textSize="25sp"
            android:layout_gravity="center|top"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:layout_weight="3"
            android:id="@+id/welcomeToElearning"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nipDiLogin"
            android:hint="@string/nip"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/passwordDiLogin"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:padding="20dp"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="50dp"
            android:onClick="klikLogin"
            android:id="@+id/login"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesn_t_have_an_account"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:id="@+id/doesnthaveanaccount"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:padding="20dp"
                android:layout_gravity="center|bottom"
                android:onClick="klikSignUp"
                android:layout_weight="1"
                android:id="@+id/signupDiLogin"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
