<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="riksameidy.com.latihan_bareng1.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/background"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/backgroundClicked"
                android:padding="5dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/kotakDosen"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/dosen"
                    android:onClick="userDosen"
                    android:id="@+id/pilihdosen"
                    android:textSize="20sp"
                    android:textColor="@color/textClicked"
                    android:textStyle="bold"
                    android:ems="5"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/backgroundUnClicked"
                android:padding="5dp"
                android:id="@+id/kotakMahasiswa"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/mahasiswa"
                    android:onClick="userMhs"
                    android:id="@+id/pilihmhs"
                    android:textSize="20sp"
                    android:textColor="@color/textUnClicked"
                    android:textStyle="bold"
                    android:ems="5"
                    />

            </LinearLayout>

        </LinearLayout>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nipDiSignup"
            android:hint="@string/nip"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordDiSignup"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/namaDiSignup"
            android:hint="@string/nama"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailDiSignup"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/sign_up"
            android:id="@+id/signup"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:onClick="SignUp"/>

    </LinearLayout>

</RelativeLayout>
